To reduce the probability of transaction inconsistencies due to RecordVersion's transaction pointer pointing to deleted Transaction objects (see for instance bug#41357) we temporarily disable deleting of old Transaction objects from the Transaction::commit().

After this all Transaction object will only be purged by the scavenger.